Contact us remaining

--- a/gourmet/templates/kitchen/team.html
+++ b/gourmet/templates/kitchen/team.html
@@ -12,6 +12,15 @@
   min-height: 150px;
   font-family: 'Satisfy', cursive;
 }
+.ansh{
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNCzqHsaPS7Za3dXg8Dfl3_elnr9y4SJMO79hBQAXsbVfg9-O7kA");
+}
+.dimple{
+
+}
+.harsh{
+
+}
 </style>
 <div class="page-header2" >
     <div class="container">
@@ -30,7 +39,7 @@
   <div class="col-md-4">
   <div class="cont">
      <div class="card_Banner">
-        <div class="card_Avatar"></div>
+        <div class="card_Avatar dimple"></div>
      </div>
   	<h3>Dimple Rathod</h3>
   	<a href="mailto:dimplecrathod@gmail.com"><i class="far fa-envelope"></i> dimplecrathod@gmail.com</a>
@@ -43,11 +52,11 @@
 <div class="col-md-4">
 <div class="cont">
    <div class="card_Banner">
-      <div class="card_Avatar"></div>
+      <div class="card_Avatar harsh"></div>
    </div>
-	<h3>Dimple Rathod</h3>
-	<a href="mailto:dimplecrathod@gmail.com"><i class="far fa-envelope"></i> dimplecrathod@gmail.com</a>
-	<a><i class="fas fa-mobile-alt"></i> +91 9619350071</a>
+	<h3>Harsh Salvi</h3>
+	<a href="mailto:harshsalvi24@gmail.com"><i class="far fa-envelope"></i> harshsalvi24@gmail.com</a>
+	<a><i class="fas fa-mobile-alt"></i> +91 9004149047</a>
 	   <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
 		<a href="" target="_blank"><i class="fab fa-facebook"></i></a>
 </div>
@@ -56,11 +65,11 @@
 <div class="col-md-4">
 <div class="cont">
    <div class="card_Banner">
-      <div class="card_Avatar"></div>
+      <div class="card_Avatar ansh"></div>
    </div>
-	<h3>Dimple Rathod</h3>
-	<a href="mailto:dimplecrathod@gmail.com"><i class="far fa-envelope"></i> dimplecrathod@gmail.com</a>
-	<a><i class="fas fa-mobile-alt"></i> +91 9619350071</a>
+	<h3>Ansh Shah</h3>
+	<a href="mailto:ansh.shah18298@gmail.com"><i class="far fa-envelope"></i> ansh.shah18298@gmail.com</a>
+	<a><i class="fas fa-mobile-alt"></i> +91 9920573741</a>
 	   <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
 		<a href="" target="_blank"><i class="fab fa-facebook"></i></a>
 </div>
