--- a/gourmet/templates/kitchen/base.html
+++ b/gourmet/templates/kitchen/base.html
@@ -28,8 +28,8 @@
           <li class="dropdown">
               <li><a href="/meet">Meet the team</a></li>
           </li>
-          <li><a href="#">Feedback</a></li>
-					<li><a href="#">Contact Us</a></li>
+          <li><a href="">Feedback</a></li>
+					<li><a href="" data-toggle="modal" data-target="#exampleModalCenterLogin">Contact Us</a></li>
         </ul>
 				<ul class="nav navbar-nav navbar-right">
 					{% if user.is_authenticated %}
