--- a/gourmet/templates/kitchen/team.html
+++ b/gourmet/templates/kitchen/team.html
@@ -13,13 +13,13 @@
   font-family: 'Satisfy', cursive;
 }
 .ansh{
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNCzqHsaPS7Za3dXg8Dfl3_elnr9y4SJMO79hBQAXsbVfg9-O7kA");
+  background-image: url("{% static "kitchen/ansh.JPG" %}");
 }
 .dimple{
-
+  background-image: url("{% static "kitchen/dimple.jpg" %}");
 }
 .harsh{
-
+   background-image: url("{% static "kitchen/harsh.jpeg" %}");
 }
 </style>
 <div class="page-header2" >
@@ -44,8 +44,8 @@
   	<h3>Dimple Rathod</h3>
   	<a href="mailto:dimplecrathod@gmail.com"><i class="far fa-envelope"></i> dimplecrathod@gmail.com</a>
   	<a><i class="fas fa-mobile-alt"></i> +91 9619350071</a>
-  	   <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-  		<a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+  	   <a href="https://www.linkedin.com/in/dimple-rathod-146316139/" target="_blank"><i class="fab fa-linkedin"></i></a>
+  		<a href="https://www.facebook.com/dimple.rathod.9250" target="_blank"><i class="fab fa-facebook"></i></a>
   </div>
   </div>
 
@@ -57,8 +57,8 @@
 	<h3>Harsh Salvi</h3>
 	<a href="mailto:harshsalvi24@gmail.com"><i class="far fa-envelope"></i> harshsalvi24@gmail.com</a>
 	<a><i class="fas fa-mobile-alt"></i> +91 9004149047</a>
-	   <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-		<a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+	   <a href="https://www.linkedin.com/in/harsh-salvi/" target="_blank"><i class="fab fa-linkedin"></i></a>
+		<a href="https://github.com/harsh-bat" target="_blank"><i class="fab fa-github"></i></a>
 </div>
 </div>
 
@@ -70,8 +70,8 @@
 	<h3>Ansh Shah</h3>
 	<a href="mailto:ansh.shah18298@gmail.com"><i class="far fa-envelope"></i> ansh.shah18298@gmail.com</a>
 	<a><i class="fas fa-mobile-alt"></i> +91 9920573741</a>
-	   <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-		<a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+	   <a href="https://www.linkedin.com/in/ansh-shah-723b92157/" target="_blank"><i class="fab fa-linkedin"></i></a>
+		<a href="https://www.facebook.com/ansh.shah.018" target="_blank"><i class="fab fa-facebook"></i></a>
 </div>
 </div>
 
