--- a/gourmet/templates/kitchen/index.html
+++ b/gourmet/templates/kitchen/index.html
@@ -43,7 +43,7 @@
     </div>
 
         <div class="row text-center">
-      <a class="btn btn-secondary" href="#" data-toggle="modal" data-target="#exampleModalCenterCatalogue">View Complete Catalogue</a>
+      <a class="btn btn-large btn-secondary" href="#" data-toggle="modal" data-target="#exampleModalCenterCatalogue">View Complete Catalogue</a>
       </div>
   </section>
   <div class="modal fade" id="exampleModalCenterCatalogue" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
