No db and icon added

--- a/gourmet/templates/kitchen/base.html
+++ b/gourmet/templates/kitchen/base.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
   <title>The Gourmet Kitchen</title>
+	<link rel="icon" href="{% static 'kitchen/favicon.ico' %}">
 	<link rel="stylesheet" href="{% static "bootstrap/bootstrap.min.css" %}">
 	<link rel="stylesheet" href="{% static "bootstrap/bootstrap-theme.min.css" %}">
 	<script type="text/javascript" src="{% static "bootstrap/jquery-3.3.1.min.js" %}"></script>
@@ -29,7 +30,7 @@
           <li class="dropdown">
               <li><a href="/meet">Meet the team</a></li>
           </li>
-          <li><a href="">Feedback</a></li>
+          <li><a href="https://goo.gl/forms/IWYYIVhOXYXAGOdf1">Feedback</a></li>
 					<li><a href="" data-toggle="modal" data-target="#exampleModalContact">Contact Us</a></li>
         </ul>
 				<ul class="nav navbar-nav navbar-right">
@@ -140,7 +141,6 @@
 			<a><i class="fas fa-mobile-alt"></i> +91 2242335000/ +91 2242335001</a>
 		</div>
 	</center>
-
 	</div>
 	</div> <!--  modal end -->
 
