Just after new db

--- a/gourmet/templates/kitchen/base.html
+++ b/gourmet/templates/kitchen/base.html
@@ -125,7 +125,7 @@
 	</div> <!--  modal end -->
 	<style media="screen">
 	.chef_contact{
-		background-image: url("{% static "kitchen/chef-animate.jpg" %}");
+		background-image: url("{% static "kitchen/chef-animate.png" %}");
 	}
 	</style>
 
