--- a/gourmet/static/kitchen/base.css
+++ b/gourmet/static/kitchen/base.css
@@ -1,7 +1,9 @@
-html, body{
-  width: 100%;
-  height: 100%;
+body{
   margin: 0;
+  max-width: 100%;
+  max-height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
   padding: 0;
 }
 
