--- a/gourmet/static/kitchen/new_rec.css
+++ b/gourmet/static/kitchen/new_rec.css
@@ -1,8 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Quicksand:300,400|Lato:400,300|Coda|Open+Sans);
 body {
   font-family: "Open sans", sans-serif;
-width: 100vw;
-height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
 overflow-x: hidden;
 background-repeat: no-repeat;
 }
