--- a/gourmet/templates/kitchen/index.html
+++ b/gourmet/templates/kitchen/index.html
@@ -21,25 +21,26 @@
 
     <!-- recipe cards here -->
     <div class="row">
-    {% for rec_name, rec_desc, rec_hr, rec_min, rec_url, rec_img, rec_cal in recs %}
-    <div class="col-xs-12 col-md-4 col-sm-6">
-    <div class="flip-card"  onclick="location.href='{{rec_url}}'">
-    <div class="flip-card-inner">
-     <div class="flip-card-front">
-       <img src="{{MEDIA_URL}}{{rec_img}}" style="width:330px;height:280px;">
-     </div>
-     <div class="flip-card-back container">
-       <h1 class="rectitle">{{ rec_name }}</h1><br><br>
-       <p class="recdes">{{ rec_desc }}</p>
-       <ul class="media">
-     <li><span class="icon icon-clock"></span><span>{{rec_hr}}hr {{rec_min}}min</span></li>
-     <li><span class="icon icon-level"></span><span> Medium</span></li>
-     </ul>
-     </div>
-    </div>
-    </div>
-    </div>
-    {% endfor %}
+      {% for rec_name, rec_desc, rec_hr, rec_min, rec_url, rec_img, rec_cal in recs %}
+      <div class="col-xs-12 col-md-4 col-sm-6">
+      <div class="flip-card"  onclick="location.href='{{rec_url}}'">
+      <div class="flip-card-inner">
+       <div class="flip-card-front">
+         <img src="{{MEDIA_URL}}{{rec_img}}" style="width:330px;height:280px;">
+       </div>
+       <div class="flip-card-back container">
+         <h1 class="rectitle">{{ rec_name }}</h1><br><br>
+         <p class="recdes">{{ rec_desc }}</p>
+         <ul class="media">
+       <li><span class="icon icon-clock"></span><span>{{rec_hr}}hr {{rec_min}}min</span></li>
+       <li><span class="icon icon-level"></span><span> Medium</span></li>
+       <li><span class="icon icon-calories"></span><span>{{ rec_cal }}</span></li>
+       </ul>
+       </div>
+      </div>
+      </div>
+      </div>
+      {% endfor %}
     </div>
 
         <div class="row text-center">
